Fixed contrast

--- a/estilos.css
+++ b/estilos.css
@@ -54,7 +54,7 @@
 	  font-family: arial, helvetica, sans-serif;
 	  font-weight: bold;
 	  font-size: 3em;
-		color: #CC9900;
+		color: #000;
 	}
 	
 	#aceitera{
@@ -69,7 +69,7 @@
 		font-weight: bold;
 	  font-size: 1.2em;
 		font-style: italic;
-		color: #b50000;
+		color: #000;
 	}	
 	
 	
